# IX-py

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ix_py/: __main__.py  constants.py  core.py  env.py  lockfile.py  utils.py
tests/: test_cli.py  test_doctor.py  test_lock.py  test_manager.py
zeroenv/: __init__.py  cli.py  doctor.py  lock.py  manager.py  platform.py  utils.py
