[project]
name = "ix-py"
version = "0.1.0"
description = "A zero-compromise environment manager that ends Python dependency hell for good."
readme = "README.md"
authors = [
  { name="Bryce Wooster" }
]
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "click>=8.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "virtualenv>=20.24.0",
  "packaging>=23.0"
]

[project.scripts]
ix = "zeroenv.cli:main"

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"
