# pyproject.toml

[project]
name = "ix-py"
version = "0.1.0"
description = "A zero-dependency environment manager that solves Python's dependency hell"
authors = [
  { name = "Bryce Wooster" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
ix = "zeroenv.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
