[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-py"
version = "0.1.0"
description = "Zero-dependency Python environment and dependency manager"
authors = [
    { name = "Bryce Wooster" }
]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["python", "dependency-manager", "virtualenv", "environment", "pip"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ix = "ix_py.__main__:main"
