# setup.cfg

[metadata]
name = ix-py
version = 0.1.0
author = Bryce Wooster
description = A zero-dependency Python environment manager that ends dependency hell
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BryceWDesign/IX-py
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    Topic :: System :: Systems Administration

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ix = zeroenv.cli:main
